objects/BTx_Engagement_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Cloud_Offer__c</fullName>
        <description>Cloud Offer</description>
        <label>Cloud Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Demand</fullName>
                </value>
                <value>
                    <fullName>Cloud Supply</fullName>
                </value>
                <value>
                    <fullName>To Be Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collab_Conferencing_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Collab-WebEx Mix %</description>
        <label>Collab-Conferencing Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collab_Conferencing_in_K__c</fullName>
        <description>Collab Conferencing $ in K</description>
        <formula>Collab_Conferencing_Mix__c  * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collab-Conferencing $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collab_Contact_Center_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Collab-Contact Center Mix %</description>
        <label>Collab-Contact Center Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collab_Contact_Center_in_K__c</fullName>
        <description>Collab-Contact Center $ in K</description>
        <formula>Collab_Contact_Center_Mix__c *  Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collab-Contact Center $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collab_Core_in_K__c</fullName>
        <description>Collab Core $ in K</description>
        <formula>Project_Total_Collab_Mix__c * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collab-Core $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collab_UC_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Collab-UC Mix %</description>
        <label>Collab-UC Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collab_UC_in_K__c</fullName>
        <description>Collab_UC$ in K</description>
        <formula>Collab_UC_Mix__c *  Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collab-UC $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collab_Video_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Collab-Video Mix %</description>
        <label>Collab-Video Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collab_Video_in_K__c</fullName>
        <description>Collab_Video $ in K</description>
        <formula>Collab_Video_Mix__c  * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collab-Video $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments associated with revenue</description>
        <label>Offer-Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Computing_Systems_in_K__c</fullName>
        <description>Computing Systems $ in K</description>
        <formula>Engagement_Total_DC_Mix__c * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Computing Systems $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_Route_Switch_in_K__c</fullName>
        <description>Core_Route_Switch $ in K</description>
        <formula>Project_Total_Core_Route_Switch_Mix__c * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Route Switch $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <formula>Opportunity__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Deal ID</inlineHelpText>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Total_DC_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Computing Systems Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <description>BTx Engagement for which revenue is being captured.</description>
        <label>Project</label>
        <referenceTo>BTx_Engagement_Activity__c</referenceTo>
        <relationshipLabel>BTx Project Revenue by Offers</relationshipLabel>
        <relationshipName>BTx_Engagement_Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date_Fiscal_Quarter__c</fullName>
        <label>Expected Book Date Fiscal Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date_Fiscal_Year__c</fullName>
        <label>Expected Book Date Fiscal Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date__c</fullName>
        <description>Expected Book Date</description>
        <label>Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Product_in_K__c</fullName>
        <description>Expected Product in K</description>
        <label>Expected Product in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Service_in_K__c</fullName>
        <description>Expected Service in K</description>
        <label>Expected Service in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Total_in_K__c</fullName>
        <description>Expected Total $ in K</description>
        <formula>Expected_Product_in_K__c +
Expected_Service_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Total in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <description>Forecast_Status</description>
        <inlineHelpText>COMMIT: At least 80% probability for the expected book date

UPSIDE: At least 60% probability for the expected book date

NON-FORECASTABLE: Less than 60% probability of closing</inlineHelpText>
        <label>Forecast Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Forecastable</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Primary_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Primary Offer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>We need to track replicated successes of our projects. To this end, we need to be able to designate which revenue streams are initial vs "franchise"</description>
        <inlineHelpText>ALL-IN-ONE - Single implementation project; no opportunity to repeat with customer 
INITIAL/PILOT - Single geo implementation. Opportunity to repeat with the customer 
FRANCHISE WIN - Repeated sale of INITIAL/PILOT with customer (same business problem)</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All-in-one</fullName>
                </value>
                <value>
                    <fullName>Initial/Pilot</fullName>
                </value>
                <value>
                    <fullName>Franchise Win</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BTx Project Revenue by Offers</relationshipLabel>
        <relationshipName>BTx_Project_Revenue_by_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Total_Collab_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Collab-Core Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Total_Core_Route_Switch_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Core Route/Switch Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Total_Security_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Security Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Total_Wireless_Mix__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wireless Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <description>Sales Order #</description>
        <label>Sales Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_in_K__c</fullName>
        <description>Security $ in K</description>
        <formula>Project_Total_Security_Mix__c * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Software_Offer__c</fullName>
        <description>Software Offer</description>
        <label>Software Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Security ELA</fullName>
                </value>
                <value>
                    <fullName>Collab ELA</fullName>
                </value>
                <value>
                    <fullName>CiscoOne Datacenter Network Foundation</fullName>
                </value>
                <value>
                    <fullName>CiscoOne Datacenter Network Advanced</fullName>
                </value>
                <value>
                    <fullName>CiscoOne UCS Foundation</fullName>
                </value>
                <value>
                    <fullName>CiscoOne UCS Advanced</fullName>
                </value>
                <value>
                    <fullName>CiscoOne WAN Foundation</fullName>
                </value>
                <value>
                    <fullName>CiscoOne WAN Advanced</fullName>
                </value>
                <value>
                    <fullName>CiscoOne Access Foundation</fullName>
                </value>
                <value>
                    <fullName>CiscoOne Access Advanced</fullName>
                </value>
                <value>
                    <fullName>Cross Catalog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Offers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile Agency / Bank / Firm Platform</fullName>
                </value>
                <value>
                    <fullName>Business Conferencing and Training</fullName>
                </value>
                <value>
                    <fullName>Business Video</fullName>
                </value>
                <value>
                    <fullName>Connected Agency / Bank / Firm Platform</fullName>
                </value>
                <value>
                    <fullName>Connected Analytics for Network Deployment</fullName>
                </value>
                <value>
                    <fullName>Connected Analytics for Retail</fullName>
                </value>
                <value>
                    <fullName>Connected Energy</fullName>
                </value>
                <value>
                    <fullName>Connected Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Connected Processes</fullName>
                </value>
                <value>
                    <fullName>Critical Infrastructure Security</fullName>
                </value>
                <value>
                    <fullName>Customer Effort Analytics</fullName>
                </value>
                <value>
                    <fullName>Cyber Security for Industry</fullName>
                </value>
                <value>
                    <fullName>Cyber Security for Insurance / Banking</fullName>
                </value>
                <value>
                    <fullName>Digital Enterprise</fullName>
                </value>
                <value>
                    <fullName>Digital Interactive Experience</fullName>
                </value>
                <value>
                    <fullName>Digital Team Collaboration</fullName>
                </value>
                <value>
                    <fullName>Distribution Center-Future</fullName>
                </value>
                <value>
                    <fullName>Employee Enablement-Future</fullName>
                </value>
                <value>
                    <fullName>Extended Care</fullName>
                </value>
                <value>
                    <fullName>Flexible Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Guest and Staff Communications</fullName>
                </value>
                <value>
                    <fullName>Guest Loyalty Experience</fullName>
                </value>
                <value>
                    <fullName>Guest Mobile Experience</fullName>
                </value>
                <value>
                    <fullName>Guest Personalized Stay</fullName>
                </value>
                <value>
                    <fullName>Intelligent Contact Center</fullName>
                </value>
                <value>
                    <fullName>Interactive Kiosks</fullName>
                </value>
                <value>
                    <fullName>Life Line</fullName>
                </value>
                <value>
                    <fullName>Location-Based Analytics</fullName>
                </value>
                <value>
                    <fullName>Location Integrated Real Time communications</fullName>
                </value>
                <value>
                    <fullName>Location Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Focus__c</fullName>
        <description>Specialty Focus</description>
        <label>Specialty Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Services Platform Group (SPG)</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_All_BE__c</fullName>
        <formula>Collab_Contact_Center_Mix__c +
Collab_UC_Mix__c +
Collab_Video_Mix__c +
Collab_Conferencing_Mix__c +
Project_Total_Collab_Mix__c +
Engagement_Total_DC_Mix__c  +   
Project_Total_Security_Mix__c +
Project_Total_Wireless_Mix__c +
Project_Total_Core_Route_Switch_Mix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of All BE %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wireless_in_K__c</fullName>
        <description>Wireless $ in K</description>
        <formula>Project_Total_Wireless_Mix__c * Expected_Product_in_K__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wireless $ in K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <description>Used to record revenue and pipeline information for a BTx Engagement</description>
    <label>BTx Project Revenue by Offer</label>
    <nameField>
        <displayFormat>BTx Revenue-{0}</displayFormat>
        <label>BTx Project Revenue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTx Project Revenue by Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mandatry_Solution_Description</fullName>
        <active>true</active>
        <description>Solution-Description is mandatory if Other is selected as the Solution</description>
        <errorConditionFormula>TEXT( Solution__c )  = 'Other (provide description below)' &amp;&amp; 
 Comments__c  = ''</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Kindly enter the Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_must_be_100_across_all_5_BEs</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(CONTAINS( $User.Username, 'sfdc_apex_user@cisco.com'))
&amp;&amp;
 Expected_Product_in_K__c &gt;0
&amp;&amp;
Sum_of_All_BE__c  &lt;&gt; 1.0</errorConditionFormula>
        <errorDisplayField>Collab_Contact_Center_Mix__c</errorDisplayField>
        <errorMessage>Total % must add up to 100% across all 5 BEs in this section</errorMessage>
    </validationRules>
</CustomObject>